small deployment modification

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-website",
-  "homepage": "https://Vijey31.github.io/My_Portfolio",
+  "homepage": "https://Vijey31.github.io/My_Portfolio/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
